k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: couchbase-admin
  labels:
    name: couchbase-admin
