k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchbase-admin-service
  namespace: couchbase-admin
  labels:
    app: couchbase-admin-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: couchbase-admin-service
